--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -41,14 +37,10 @@
         Shire Digital Solutions | Custom Software Design and Development
     </title>
 
-
       <link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
       <link href="assets/css/toolkit-minimal.css" rel="stylesheet">
       <link href="assets/css/application-minimal.css" rel="stylesheet">
       <link href="assets/css/shire.css" rel="stylesheet">
-
-
-
 
     <style>
       /* note: this is a hack for ios iframe for bootstrap themes shopify page */
@@ -70,9 +62,6 @@
     </style>
   </head>
 <body>
-
-
-
 
 <nav class="navbar navbar-default navbar-static-top navbar-padded text-uppercase app-navbar">
   <div class="container">
@@ -113,16 +102,20 @@
     <!-- <h3 style="color: #72A541;"><strong>A Full Service Digital Agency</strong></h3>-->
   </div>
 </div>
-<div class="block block-bordered-lg shireIntro">
-    <div id='testJS' style='text-align: center'></div>
-  <div class="container text-center app-translate-15" data-transition="entrance">
-   </div>
+
+<div class="block block-bordered-lg" style="padding: 0; background-color: #72a541;">
+    <div id="testJS" style="text-align: center"></div>
+    <div class="widerContainer"><!-- Removed: data-transition="entrance" -->
+        <div class="row">
+            <h1 style="color: #ffffff; font-weight: 400; text-align: center; margin: 50px auto 45px;">We leverage online technology to help businesses grow.</h1>
+        </div>
+    </div>
+</div>
+
 
     <div class="widerContainer  app-translate-15" id='services' data-transition="entrance">
         <div class="row">
             <div class="col-md-9 col-md-offset-2">
-                <h1>We leverage online technology to help businesses grow.</h1>
-
                 <p >Your business is ready to take the next step.<br>You have a great product or service, you know you have customers, there’s just one problem - <em><span style='font-weight: 400;'>technology</span></em>.
                 </p>
                 <p >You know you need to be online, but you’re either missing the skill set or the in-house man-hours to get there.
@@ -164,11 +157,10 @@
         </div>
     </div>
 </div>
-<div class="block block-bordered-lg">
 
+<div class="block block-bordered-lg">
   <div class="container text-center app-translate-15" data-transition="entrance">
    </div>
-
     <div class="widerContainer text-center app-translate-15" data-transition="entrance">
     <div class='testimonialS'>
     <div class="row">
@@ -492,31 +484,29 @@
   </p>
 </div>
 
-  <div class="container hidden" id="post-contact-div">
-    <h2 class="lead m-b-md" style="color: #72A541;">
-      <strong>Thanks for reaching out to us.<br>We'll get back to you soon!</strong>
-    </h2>
-  </div>
+    <div class="container hidden" id="post-contact-div">
+        <h2 class="lead m-b-md" style="color: #72A541;">
+            <strong>Thanks for reaching out to us.<br>We'll get back to you soon!</strong>
+        </h2>
+    </div>
 </div>
 
 <div class="block app-block-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 m-b">
-        <h6 class="text-uppercase">Space Coast, FL 32927</h6>
-      </div>
-       <div class="col-sm-6 text-right">
-        <h6 class="text-uppercase">&copy; 2017 SHIRE DIGITAL SOLUTIONS</h6>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 m-b">
+                <h6 class="text-uppercase">Space Coast, FL 32927</h6>
+            </div>
+            <div class="col-sm-6 text-right">
+                <h6 class="text-uppercase">&copy; 2017 SHIRE DIGITAL SOLUTIONS</h6>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
-
-
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/toolkit.js"></script>
-    <script src="assets/js/application.js"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/toolkit.js"></script>
+<script src="assets/js/application.js"></script>
 <script>
   $('#contact-form').on( "submit", function(e){
     e.preventDefault();
@@ -543,7 +533,6 @@
   });
 </script>
 <script>
-
 $(document).ready(function(){
     function logoResizing(){
         if($(window).height() < $(window).width()){
@@ -569,8 +558,7 @@ $(document).ready(function(){
     })
 
 });
-
-
 </script>
-  </body>
+
+</body>
 </html>
