Initial Intro Paragraph
First pass on formatting the intro content after the first callout,
before the one-third column cards.

--- a/index.html
+++ b/index.html
@@ -112,21 +112,24 @@
     </div>
 </div>
 
-
-    <div class="widerContainer  app-translate-15" id='services' data-transition="entrance">
+<div class="block block-bordered-lg" style="padding: 50px 0;">
+    <div class="widerContainer app-translate-15" data-transition="entrance">
         <div class="row">
             <div class="col-md-9 col-md-offset-2">
-                <p >Your business is ready to take the next step.<br>You have a great product or service, you know you have customers, there’s just one problem - <em><span style='font-weight: 400;'>technology</span></em>.
-                </p>
-                <p >You know you need to be online, but you’re either missing the skill set or the in-house man-hours to get there.
-                </p>
+                <p>Your business is ready to take the next step.
+                    <br>You have a great product or service, you know you have customers, there’s just one problem - <em><span style='font-weight: 400;'>technology</span></em>.</p>
+                <p>You know you need to be online, but you’re either missing the skill set or the in-house man-hours to get there.</p>
+                <h3 style="color: #72A541; font-weight: 400; text-align: center;">Shire Digital Solutions gives you the expertise and resources you need.</h3>
+        </div>
+      </div>
+  </div>
+</div>
 
-                <h3>Shire Digital Solutions gives you the expertise and resources you need.
-                </h3>
-
-                <p class='largerText'>We’ve built our team to offer you the services you need:
-                </p>
-
+<div class="block block-bordered-lg">
+    <div class="widerContainer app-translate-15" data-transition="entrance">
+        <div class="row">
+            <div class="col-md-9 col-md-offset-2">
+                <p class='largerText'>We’ve built our team to offer you the services you need:</p>
                 <ul >
                     <li>Logo Design &amp; Graphic Design</li>
                     <li>Small Business Website Creation Including Blogs</li>
@@ -134,24 +137,15 @@
                     <li>Scalable Cloud Infrastructure</li>
                     <li>Email Hosting</li>
                 </ul>
-
-                <p class='largerText'>We package these services tailored to your needs.
-                </p>
-
-                <p>For one client, that may mean just a logo design. For another, it may mean custom web app development with ongoing support hosted on scalable, load-balanced infrastructure. We aim to provide you with exactly what you need. If you’re not yet sure what that is, we can help you figure that out too.
-                </p>
-
-                <p class='largerText'>Our experience includes:
-                </p>
-
+                <p class='largerText'>We package these services tailored to your needs.</p>
+                <p>For one client, that may mean just a logo design. For another, it may mean custom web app development with ongoing support hosted on scalable, load-balanced infrastructure. We aim to provide you with exactly what you need. If you’re not yet sure what that is, we can help you figure that out too.</p>
+                <p class='largerText'>Our experience includes:</p>
                 <ul>
                     <li>Building, and maintaining an online classifieds system that we grew to over 10,000 users within its first year</li>
                     <li>Building a database driven charity fundraising web application for a professional athlete</li>
                     <li>Building, updating, and maintaining a custom content management system for a SaaS company that serviced major international insurance companies</li>
                 </ul>
-
                 <p class='largerText'>We have decades of collective experience ready to go to work on your project.</p>
-
                 <h3>Growing a business is hard. <br> We handle your online technology so you can <br>focus on your company and your customers.</h3>
           </div>
         </div>
