--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <div class="block block-bordered-lg" style="padding: 0; background-color: #72a541;">
     <div id="testJS" style="text-align: center"></div>
-    <div class="widerContainer"><!-- Removed: data-transition="entrance" -->
+    <div class="widerContainer">
         <div class="row">
             <h1 style="color: #ffffff; font-weight: 400; text-align: center; margin: 50px auto 45px;">We leverage online technology to help businesses grow.</h1>
         </div>
@@ -128,26 +128,73 @@
 <div class="block block-bordered-lg">
     <div class="widerContainer app-translate-15" data-transition="entrance">
         <div class="row">
-            <div class="col-md-9 col-md-offset-2">
-                <p class='largerText'>We’ve built our team to offer you the services you need:</p>
-                <ul >
-                    <li>Logo Design &amp; Graphic Design</li>
-                    <li>Small Business Website Creation Including Blogs</li>
-                    <li>Custom Database Driven Web Application Development</li>
-                    <li>Scalable Cloud Infrastructure</li>
-                    <li>Email Hosting</li>
-                </ul>
-                <p class='largerText'>We package these services tailored to your needs.</p>
-                <p>For one client, that may mean just a logo design. For another, it may mean custom web app development with ongoing support hosted on scalable, load-balanced infrastructure. We aim to provide you with exactly what you need. If you’re not yet sure what that is, we can help you figure that out too.</p>
-                <p class='largerText'>Our experience includes:</p>
-                <ul>
-                    <li>Building, and maintaining an online classifieds system that we grew to over 10,000 users within its first year</li>
-                    <li>Building a database driven charity fundraising web application for a professional athlete</li>
-                    <li>Building, updating, and maintaining a custom content management system for a SaaS company that serviced major international insurance companies</li>
-                </ul>
-                <p class='largerText'>We have decades of collective experience ready to go to work on your project.</p>
-                <h3>Growing a business is hard. <br> We handle your online technology so you can <br>focus on your company and your customers.</h3>
-          </div>
+
+            <div class="col-md-4">
+                <div class="panel panel-default panel-icon">
+                    <div class="panel-heading">
+                        <div class="card-icon">
+                            <span class="icon icon-users"></span>
+                        </div>
+                        <h4>We've built our team to offer you the services you need:</h4>
+                    </div>
+                    <div class="panel-body">
+                        <ul>
+                            <li>Logo Design &amp; Graphic Design</li>
+                            <li>Small Business Website Creation Including Blogs</li>
+                            <li>Custom Database Driven Web Application Development</li>
+                            <li>Scalable Cloud Infrastructure</li>
+                            <li>Email Hosting</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="panel panel-default panel-icon">
+                    <div class="panel-heading">
+                        <div class="card-icon">
+                            <span class="icon icon-shopping-bag"></span>
+                        </div>
+                        <h4>We package these services tailored to your needs.</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>For one client, that may mean just a logo design. For another, it may mean custom web app development with ongoing support hosted on scalable, load-balanced infrastructure. We aim to provide you with exactly what you need. If you’re not yet sure what that is, we can help you figure that out too.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="panel panel-default panel-icon">
+                    <div class="panel-heading">
+                        <div class="card-icon">
+                            <span class="icon icon-light-bulb"></span>
+                        </div>
+                        <h4>Our experience includes:</h4>
+                    </div>
+                    <div class="panel-body">
+                        <ul>
+                            <li>Building, and maintaining an online classifieds system that we grew to over 10,000 users within its first year</li>
+                            <li>Building a database driven charity fundraising web application for a professional athlete</li>
+                            <li>Building, updating, and maintaining a custom content management system for a SaaS company that serviced major international insurance companies</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-12">
+                <h3 style="color: #72A541; font-weight: 400; text-align: center;">We have decades of collective experience ready to go to work on your project.</h3>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="block block-bordered-lg" style="padding: 0; background-color: #72a541;">
+    <div id="testJS" style="text-align: center"></div>
+    <div class="widerContainer"><!-- Removed: data-transition="entrance" -->
+        <div class="row">
+            <h1 style="color: #ffffff; font-weight: 400; margin: 50px auto 45px;">Growing a business is hard.</h1>
+            <h3> <br> We handle your online technology so you can <br>focus on your company and your customers.</h3>
         </div>
     </div>
 </div>
