--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
   </div>
 </div>
 
-<div class="block block-bordered-lg">
-    <div class="widerContainer app-translate-15" data-transition="entrance">
+<div class="block app-block-services" style="padding-bottom: 100px;">
+    <div class="widerContainer">
         <div class="row">
 
-            <div class="col-md-4">
+            <div class="col-md-4 app-translate-15" data-transition="entrance">
                 <div class="panel panel-default panel-icon">
                     <div class="panel-heading">
                         <div class="card-icon">
@@ -138,18 +138,18 @@
                         <h4>We've built our team to offer you the services you need:</h4>
                     </div>
                     <div class="panel-body">
-                        <ul>
-                            <li>Logo Design &amp; Graphic Design</li>
-                            <li>Small Business Website Creation Including Blogs</li>
-                            <li>Custom Database Driven Web Application Development</li>
-                            <li>Scalable Cloud Infrastructure</li>
-                            <li>Email Hosting</li>
+                        <ul class="iconlist">
+                            <li><span class="icon icon-check"></span>Logo Design &amp; Graphic Design</li>
+                            <li><span class="icon icon-check"></span>Small Business Website Creation Including Blogs</li>
+                            <li><span class="icon icon-check"></span>Custom Database Driven Web Application Development</li>
+                            <li><span class="icon icon-check"></span>Scalable Cloud Infrastructure</li>
+                            <li><span class="icon icon-check"></span>Email Hosting</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 app-translate-15" data-transition="entrance">
                 <div class="panel panel-default panel-icon">
                     <div class="panel-heading">
                         <div class="card-icon">
@@ -163,7 +163,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 app-translate-15" data-transition="entrance">
                 <div class="panel panel-default panel-icon">
                     <div class="panel-heading">
                         <div class="card-icon">
@@ -172,16 +172,16 @@
                         <h4>Our experience includes:</h4>
                     </div>
                     <div class="panel-body">
-                        <ul>
-                            <li>Building, and maintaining an online classifieds system that we grew to over 10,000 users within its first year</li>
-                            <li>Building a database driven charity fundraising web application for a professional athlete</li>
-                            <li>Building, updating, and maintaining a custom content management system for a SaaS company that serviced major international insurance companies</li>
+                        <ul class="iconlist">
+                            <li><span class="icon icon-check"></span>Building, and maintaining an online classifieds system that we grew to over 10,000 users within its first year</li>
+                            <li><span class="icon icon-check"></span>Building a database driven charity fundraising web application for a professional athlete</li>
+                            <li><span class="icon icon-check"></span>Building, updating, and maintaining a custom content management system for a SaaS company that serviced major international insurance companies</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 app-translate-15" data-transition="entrance">
                 <h3 style="color: #72A541; font-weight: 400; text-align: center;">We have decades of collective experience ready to go to work on your project.</h3>
             </div>
 
@@ -194,7 +194,8 @@
     <div class="widerContainer"><!-- Removed: data-transition="entrance" -->
         <div class="row">
             <h1 style="color: #ffffff; font-weight: 400; margin: 50px auto 45px;">Growing a business is hard.</h1>
-            <h3> <br> We handle your online technology so you can <br>focus on your company and your customers.</h3>
+            <h3>We handle your online technology so you can
+                <br/>focus on your company and your customers.</h3>
         </div>
     </div>
 </div>
