--- a/index.html
+++ b/index.html
@@ -189,13 +189,16 @@
     </div>
 </div>
 
-<div class="block block-bordered-lg" style="padding: 0; background-color: #72a541;">
-    <div id="testJS" style="text-align: center"></div>
-    <div class="widerContainer"><!-- Removed: data-transition="entrance" -->
+<div class="block app-block-growing" style="padding: 0; background-color: #72a541;">
+    <div class="widerContainer">
         <div class="row">
-            <h1 style="color: #ffffff; font-weight: 400; margin: 50px auto 45px;">Growing a business is hard.</h1>
-            <h3>We handle your online technology so you can
-                <br/>focus on your company and your customers.</h3>
+            <div class="col-md-9">
+                <h1 style="color: #ffffff; font-weight: 600; margin: 50px auto 25px;">Growing a business is hard.</h1>
+                <h3 style="color: #ffffff; font-weight: 400; margin: 0 auto 25px;">We handle your online technology so you can focus on your company and your customers.</h3>
+            </div>
+            <div class="col-md-3">
+                <span class="icon icon-leaf icon-huge"></span>
+            </div>
         </div>
     </div>
 </div>
