--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
     <div class="navbar-collapse collapse" id="navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
 
-        <li >
+        <li>
           <a href="..//index.html">Startup</a>
         </li>
         <li class="active">
           <a href="../minimal/index.html">Minimal</a>
         </li>
-        <li >
+        <li>
           <a href="../bold/index.html">Bold</a>
         </li>
-        <li >
+        <li>
           <a href="../docs/index.html">Docs</a>
         </li>
 
@@ -98,7 +98,7 @@
 <div class="block app-block-intro">
   <div class="container text-center">
     <!-- <h1 class="block-title m-b-sm text-uppercase app-myphone-brand">Shire Digital Solutions</h1> -->
-    <img src="assets/img/SDS_Logo_Full.png" alt='Shire Digital Solutions Logo'>
+    <img src="assets/img/SDS_Logo_Full.png" alt="Shire Digital Solutions Logo">
     <!-- <h3 style="color: #72A541;"><strong>A Full Service Digital Agency</strong></h3>-->
   </div>
 </div>
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="col-md-9 col-md-offset-2">
                 <p>Your business is ready to take the next step.
-                    <br>You have a great product or service, you know you have customers, there’s just one problem - <em><span style='font-weight: 400;'>technology</span></em>.</p>
+                    <br>You have a great product or service, you know you have customers, there’s just one problem - <em><span style="font-weight: 400;">technology</span></em>.</p>
                 <p>You know you need to be online, but you’re either missing the skill set or the in-house man-hours to get there.</p>
                 <h3 style="color: #72A541; font-weight: 400; text-align: center;">Shire Digital Solutions gives you the expertise and resources you need.</h3>
         </div>
@@ -237,17 +237,17 @@
 </div>
 
 <div class="block block-bordered-lg">
-    <div class="widerContainer  app-translate-15"  id ='founder'data-transition="entrance">
-        <div class='row'>
-            <div class='col-md-12'>
+    <div class="widerContainer app-translate-15" id="founder" data-transition="entrance">
+        <div class="row">
+            <div class="col-md-12">
 
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-md-offset-1"  >
-                <img  src="assets/img/NickHeadshot2.jpg" width='275' alt='Shire Digital Solutions Founder Nick Fuller'>
+            <div class="col-md-3 col-md-offset-1">
+                <img  src="assets/img/NickHeadshot2.jpg" width="275" alt="Shire Digital Solutions Founder Nick Fuller">
             </div>
-            <div class='col-md-7'>
+            <div class="col-md-7">
                 <p>When you work with Shire Digital Solutions, you’re getting more than a quality vendor - you’re getting a partner committed to your success.
                 </p>
                 <p>We take your overall business goals into consideration when estimating work or making recommendations - we’ll talk ourselves out of work if there’s a cheaper way to meet your needs. Conversely, if we see an area where you’re leaving money on the table, we’ll bring that up as well.
@@ -256,7 +256,7 @@
                 </p>
                 <p>We can’t wait to work with you.
                 </p>
-                <p class='quoteName'> - Nick Fuller, Shire Digital Solutions Founder</p>
+                <p class="quoteName"> - Nick Fuller, Shire Digital Solutions Founder</p>
 
             </div>
         </div>
