Initial Testimonial Carousel
First pass on the Testimonials carousel.

--- a/index.html
+++ b/index.html
@@ -203,37 +203,57 @@
     </div>
 </div>
 
-<div class="block block-bordered-lg">
-  <div class="container text-center app-translate-15" data-transition="entrance">
-   </div>
+<div class="block app-block-testimonials" style="padding: 50px 0 130px;">
     <div class="widerContainer text-center app-translate-15" data-transition="entrance">
-    <div class='testimonialS'>
-    <div class="row">
-      <div class="col-md-12">
-        <h3 style="color: #72A541;">What Our Clients Are Saying</h3>
-      </div>
-    </div>
-    <div class='row'><br><br></div>
-
-     <div class='row'>
-            <div class='col-md-8' >
-               <h4>Excellent to work with!</h4>
-                <p class='info'>"Nick and his team at Shire Digital have been excellent to work with!  Not only does he bring the technical expertise to support iTherapy with our website, email hosting, and social media, but he blends this with an understanding and consideration of the overall business success.  It is rare to find the technical and business focus in one company, but we have found it with Shire Digital Solutions!"
-                </p>
-                <p class='who' style=''>- Forrest P.</p>
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 style="font-weight: 600; text-align: center; margin-bottom: 40px;">What Our Clients Are Saying</h3>
+            </div>
+            <div class="col-xs-12">
+                <div id="carousel-testimonials" class="carousel carousel-light slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-testimonials" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-testimonials" data-slide-to="1"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <div class="row">
+                                    <div class="col-xs-8 col-xs-offset-2">
+                                    <h4>Excellent to work with!</h4>
+                                    <p class="info">"Nick and his team at Shire Digital have been excellent to work with!  Not only does he bring the technical expertise to support iTherapy with our website, email hosting, and social media, but he blends this with an understanding and consideration of the overall business success.  It is rare to find the technical and business focus in one company, but we have found it with Shire Digital Solutions!"</p>
+                                    <div class="badge-icon">
+                                        <span class="icon icon-user"></span>
+                                    </div>
+                                    <p class="who">- Forrest P.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="row">
+                                <div class="col-xs-8 col-xs-offset-2">
+                                    <h4>Exceeded my expectations!</h4>
+                                    <p class="info">"Shire Digital Solutions exceeded my expectations when I came to them for help with building my home business. They answered all my questions and presented me with options that would grow my business. I had a few ideas of what I wanted, but didn't know how to make my ideas a reality. They knew exactly how to produce what I wanted.
+                                    I was impressed with the logo they created as well as the customized tools to personalize my marketing materials."</p>
+                                    <div class="badge-icon">
+                                        <span class="icon icon-user"></span>
+                                    </div>
+                                    <p class="who">- Linnea M.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="left carousel-control" href="#carousel-testimonials" role="button" data-slide="prev">
+                        <span class="icon icon-chevron-thin-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-testimonials" role="button" data-slide="next">
+                        <span class="icon icon-chevron-thin-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
         </div>
-        <div class='row' >
-            <div class='col-md-8 col-md-offset-2' style=''>
-                <h4>Exceeded my expectations!</h4>
-                <p class='info'>"Shire Digital Solutions exceeded my expectations when I came to them for help with building my home business. They answered all my questions and presented me with options that would grow my business. I had a few ideas of what I wanted, but didn't know how to make my ideas a reality. They knew exactly how to produce what I wanted.
-                I was impressed with the logo they created as well as the customized tools to personalize my marketing materials."
-                </p>
-                <p class='who' style=''>- Linnea M.</p>
-            </div>
-        </div>
     </div>
-  </div>
 </div>
 
 <div class="block block-bordered-lg">
