--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 <body>
 
 <nav class="navbar navbar-default navbar-static-top navbar-padded text-uppercase app-navbar">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed p-x-0" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed p-x-0" data-toggle="collapse" data-target="#navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
     <!--
     <div class="navbar-collapse collapse" id="navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -92,18 +92,18 @@
 
       </ul>
     </div><!--/.nav-collapse -->
-  </div>
+    </div>
 </nav>
 
 <div class="block app-block-intro">
-  <div class="container text-center">
-    <!-- <h1 class="block-title m-b-sm text-uppercase app-myphone-brand">Shire Digital Solutions</h1> -->
-    <img src="assets/img/SDS_Logo_Full.png" alt="Shire Digital Solutions Logo">
-    <!-- <h3 style="color: #72A541;"><strong>A Full Service Digital Agency</strong></h3>-->
-  </div>
+    <div class="container text-center">
+        <!-- <h1 class="block-title m-b-sm text-uppercase app-myphone-brand">Shire Digital Solutions</h1> -->
+        <img src="assets/img/SDS_Logo_Full.png" alt="Shire Digital Solutions Logo">
+        <!-- <h3 style="color: #72A541;"><strong>A Full Service Digital Agency</strong></h3>-->
+    </div>
 </div>
 
-<div class="block block-bordered-lg" style="padding: 0; background-color: #72a541;">
+<div class="block app-block-tagline" style="padding: 0; background-color: #72a541;">
     <div id="testJS" style="text-align: center"></div>
     <div class="widerContainer">
         <div class="row">
@@ -112,7 +112,7 @@
     </div>
 </div>
 
-<div class="block block-bordered-lg" style="padding: 50px 0;">
+<div class="block app-block-cta" style="padding: 50px 0;">
     <div class="widerContainer app-translate-15" data-transition="entrance">
         <div class="row">
             <div class="col-md-9 col-md-offset-2">
@@ -128,7 +128,6 @@
 <div class="block app-block-services" style="padding-bottom: 100px;">
     <div class="widerContainer">
         <div class="row">
-
             <div class="col-md-4 app-translate-15" data-transition="entrance">
                 <div class="panel panel-default panel-icon">
                     <div class="panel-heading">
@@ -148,7 +147,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-md-4 app-translate-15" data-transition="entrance">
                 <div class="panel panel-default panel-icon">
                     <div class="panel-heading">
@@ -162,7 +160,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-md-4 app-translate-15" data-transition="entrance">
                 <div class="panel panel-default panel-icon">
                     <div class="panel-heading">
@@ -180,11 +177,9 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-xs-12 app-translate-15" data-transition="entrance">
                 <h3 style="color: #72A541; font-weight: 400; text-align: center;">We have decades of collective experience ready to go to work on your project.</h3>
             </div>
-
         </div>
     </div>
 </div>
@@ -256,33 +251,22 @@
     </div>
 </div>
 
-<div class="block block-bordered-lg">
+<div class="block app-block-founder">
     <div class="widerContainer app-translate-15" id="founder" data-transition="entrance">
         <div class="row">
-            <div class="col-md-12">
-
-            </div>
-        </div>
-        <div class="row">
             <div class="col-md-3 col-md-offset-1">
-                <img  src="assets/img/NickHeadshot2.jpg" width="275" alt="Shire Digital Solutions Founder Nick Fuller">
+                <img src="assets/img/NickHeadshot2.jpg" width="275" alt="Shire Digital Solutions Founder Nick Fuller">
             </div>
             <div class="col-md-7">
-                <p>When you work with Shire Digital Solutions, you’re getting more than a quality vendor - you’re getting a partner committed to your success.
-                </p>
-                <p>We take your overall business goals into consideration when estimating work or making recommendations - we’ll talk ourselves out of work if there’s a cheaper way to meet your needs. Conversely, if we see an area where you’re leaving money on the table, we’ll bring that up as well.
-                </p>
-                <p>We work hard to deliver a quality product you’ll be proud to put your name on. More often than not, we become a go-to resource for our clients. We want to keep it that way.
-                </p>
-                <p>We can’t wait to work with you.
-                </p>
+                <p>When you work with Shire Digital Solutions, you’re getting more than a quality vendor - you’re getting a partner committed to your success.</p>
+                <p>We take your overall business goals into consideration when estimating work or making recommendations - we’ll talk ourselves out of work if there’s a cheaper way to meet your needs. Conversely, if we see an area where you’re leaving money on the table, we’ll bring that up as well.</p>
+                <p>We work hard to deliver a quality product you’ll be proud to put your name on. More often than not, we become a go-to resource for our clients. We want to keep it that way.</p>
+                <p>We can’t wait to work with you.</p>
                 <p class="quoteName"> - Nick Fuller, Shire Digital Solutions Founder</p>
-
             </div>
         </div>
     </div>
 </div>
-
 
 <!--
 <div class="block block-bordered-lg p-b-0 app-block-stats">
@@ -477,7 +461,7 @@
 </div>
 -->
 
-<div class="block block-bordered-lg text-center">
+<div class="block app-block-contact text-center">
   <div class="container" id="contact-form-div">
   <p class="lead m-b-md">
     We want to hear from you. It's never too soon. Ask us anything.
@@ -602,7 +586,7 @@ $(document).ready(function(){
                 $('.app-block-intro img').height(newImgHeight);
                 $('.app-block-intro img').width(newImgHeight);
                 $('.app-block-intro').css({'padding-top': '0px', 'margin-top': '0px', 'padding-bottom':'20px'});
-                $('.block.shireIntro').css({'padding-top': '20px'});
+                // $('.block.shireIntro').css({'padding-top': '20px'});
             }
 
         }
