--- a/index.html
+++ b/index.html
@@ -254,15 +254,23 @@
 <div class="block app-block-founder">
     <div class="widerContainer app-translate-15" id="founder" data-transition="entrance">
         <div class="row">
-            <div class="col-md-3 col-md-offset-1">
-                <img src="assets/img/NickHeadshot2.jpg" width="275" alt="Shire Digital Solutions Founder Nick Fuller">
-            </div>
-            <div class="col-md-7">
-                <p>When you work with Shire Digital Solutions, you’re getting more than a quality vendor - you’re getting a partner committed to your success.</p>
-                <p>We take your overall business goals into consideration when estimating work or making recommendations - we’ll talk ourselves out of work if there’s a cheaper way to meet your needs. Conversely, if we see an area where you’re leaving money on the table, we’ll bring that up as well.</p>
-                <p>We work hard to deliver a quality product you’ll be proud to put your name on. More often than not, we become a go-to resource for our clients. We want to keep it that way.</p>
-                <p>We can’t wait to work with you.</p>
-                <p class="quoteName"> - Nick Fuller, Shire Digital Solutions Founder</p>
+            <div class="col-xs-12">
+                <div class="panel panel-default panel-founder">
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="assets/img/NickHeadshot2.jpg" class="img-responsive" alt="Shire Digital Solutions Founder Nick Fuller">
+                            </div>
+                            <div class="col-md-8">
+                                <p>When you work with Shire Digital Solutions, you’re getting more than a quality vendor - you’re getting a partner committed to your success.</p>
+                                <p>We take your overall business goals into consideration when estimating work or making recommendations - we’ll talk ourselves out of work if there’s a cheaper way to meet your needs. Conversely, if we see an area where you’re leaving money on the table, we’ll bring that up as well.</p>
+                                <p>We work hard to deliver a quality product you’ll be proud to put your name on. More often than not, we become a go-to resource for our clients. We want to keep it that way.</p>
+                                <p>We can’t wait to work with you.</p>
+                                <p class="quoteName"> - Nick Fuller, Shire Digital Solutions Founder</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
