--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <div class="row">
             <div class="col-md-9 col-md-offset-2">
                 <p>Your business is ready to take the next step.
-                    <br>You have a great product or service, you know you have customers, there’s just one problem - <em><span style="font-weight: 400;">technology</span></em>.</p>
-                <p>You know you need to be online, but you’re either missing the skill set or the in-house man-hours to get there.</p>
+                    <br>You have a great product or service, you know you have customers, there's just one problem - <em><span style="font-weight: 400;">technology</span></em>.</p>
+                <p>You know you need to be online, but you're either missing the skill set or the in-house man-hours to get there.</p>
                 <h3 style="color: #72A541; font-weight: 400; text-align: center;">Shire Digital Solutions gives you the expertise and resources you need.</h3>
         </div>
       </div>
@@ -156,7 +156,7 @@
                         <h4>We package these services tailored to your needs.</h4>
                     </div>
                     <div class="panel-body">
-                        <p>For one client, that may mean just a logo design. For another, it may mean custom web app development with ongoing support hosted on scalable, load-balanced infrastructure. We aim to provide you with exactly what you need. If you’re not yet sure what that is, we can help you figure that out too.</p>
+                        <p>For one client, that may mean just a logo design. For another, it may mean custom web app development with ongoing support hosted on scalable, load-balanced infrastructure. We aim to provide you with exactly what you need. If you're not yet sure what that is, we can help you figure that out too.</p>
                     </div>
                 </div>
             </div>
@@ -252,20 +252,20 @@
 </div>
 
 <div class="block app-block-founder">
-    <div class="widerContainer app-translate-15" id="founder" data-transition="entrance">
+    <div class="widerContainer" id="founder">
         <div class="row">
             <div class="col-xs-12">
-                <div class="panel panel-default panel-founder">
+                <div class="panel panel-default panel-founder app-translate-15" data-transition="entrance">
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-md-4">
                                 <img src="assets/img/NickHeadshot2.jpg" class="img-responsive" alt="Shire Digital Solutions Founder Nick Fuller">
                             </div>
                             <div class="col-md-8">
-                                <p>When you work with Shire Digital Solutions, you’re getting more than a quality vendor - you’re getting a partner committed to your success.</p>
-                                <p>We take your overall business goals into consideration when estimating work or making recommendations - we’ll talk ourselves out of work if there’s a cheaper way to meet your needs. Conversely, if we see an area where you’re leaving money on the table, we’ll bring that up as well.</p>
-                                <p>We work hard to deliver a quality product you’ll be proud to put your name on. More often than not, we become a go-to resource for our clients. We want to keep it that way.</p>
-                                <p>We can’t wait to work with you.</p>
+                                <p>When you work with Shire Digital Solutions, you're getting more than a quality vendor - you're getting a partner committed to your success.</p>
+                                <p>We take your overall business goals into consideration when estimating work or making recommendations - we'll talk ourselves out of work if there's a cheaper way to meet your needs. Conversely, if we see an area where you're leaving money on the table, we'll bring that up as well.</p>
+                                <p>We work hard to deliver a quality product you'll be proud to put your name on. More often than not, we become a go-to resource for our clients. We want to keep it that way.</p>
+                                <p>We can't wait to work with you.</p>
                                 <p class="quoteName"> - Nick Fuller, Shire Digital Solutions Founder</p>
                             </div>
                         </div>
@@ -470,73 +470,63 @@
 -->
 
 <div class="block app-block-contact text-center">
-  <div class="container" id="contact-form-div">
-  <p class="lead m-b-md">
-    We want to hear from you. It's never too soon. Ask us anything.
-  </p>
-
-
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <form class="form-horizontal" id="contact-form">
-        <fieldset>
-
-          <div class="form-group">
-            <div class="col-md-12 inputGroupContainer">
-              <div class="input-group">
-                <input name="name" id="name-input" placeholder="Name" class="form-control"  type="text">
-              </div>
+    <!-- Contact Form -->
+    <div class="container" id="contact-form-div">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 style="color: #72A541; font-weight: 400; text-align: center;">We want to hear from you. It's never too soon. Ask us anything.</h3>
             </div>
-          </div>
-
-          <!-- Text input-->
-          <div class="form-group">
-            <div class="col-md-12 inputGroupContainer">
-              <div class="input-group">
-                <input name="email" id="email-input" placeholder="E-Mail Address" class="form-control"  type="text">
-              </div>
+            <div class="col-md-8 col-md-offset-2">
+                <form class="form-horizontal" id="contact-form">
+                    <fieldset>
+                        <!-- Form Input: Name -->
+                        <div class="form-group">
+                            <div class="col-md-12 inputGroupContainer">
+                                <div class="input-group">
+                                    <input name="name" id="name-input" placeholder="Name" class="form-control"  type="text">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Form Input: Email -->
+                        <div class="form-group">
+                            <div class="col-md-12 inputGroupContainer">
+                                <div class="input-group">
+                                    <input name="email" id="email-input" placeholder="E-Mail Address" class="form-control"  type="text">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Form Input: Budget -->
+                        <div class="form-group">
+                            <div class="col-md-12 inputGroupContainer">
+                                <div class="input-group">
+                                    <input name="budget" id="budget-input" placeholder="Ballpark Budget Range" class="form-control"  type="text">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Form Input: Comment -->
+                        <div class="form-group">
+                            <div class="col-md-12 inputGroupContainer">
+                                <div class="input-group">
+                                    <textarea class="form-control" id="msg-input" name="comment" placeholder="Tell Us About Your Project."></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Form Input: Button -->
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <button type="submit" class="btn btn-warning" style="background-color: #72A541; border-color: #72A541;">Send <span class="glyphicon glyphicon-send"></span></button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
             </div>
-          </div>
-
-          <div class="form-group">
-            <div class="col-md-12 inputGroupContainer">
-              <div class="input-group">
-                <input name="budget" id="budget-input" placeholder="Ballpark Budget Range" class="form-control"  type="text">
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <div class="col-md-12 inputGroupContainer">
-              <div class="input-group">
-                <!-- Ask a question, say hi, or tell us 'let's get to work!' :) -->
-                <textarea class="form-control" id="msg-input" name="comment" placeholder="Tell Us About Your Project."></textarea>
-              </div>
-            </div>
-          </div>
-
-          <!-- Button -->
-          <div class="form-group">
-            <div class="col-md-12">
-              <button type="submit" class="btn btn-warning" style="background-color: #72A541; border-color: #72A541;">Send <span class="glyphicon glyphicon-send"></span></button>
-            </div>
-          </div>
-
-        </fieldset>
-      </form>
-
+        </div>
     </div>
-  </div>
-
-  <p class="lead m-b-md">
-
-  </p>
-</div>
-
+    <!-- Contact Form Response -->
     <div class="container hidden" id="post-contact-div">
         <h2 class="lead m-b-md" style="color: #72A541;">
-            <strong>Thanks for reaching out to us.<br>We'll get back to you soon!</strong>
-        </h2>
+            <strong>Thanks for reaching out to us.
+            <br/>We'll get back to you soon!</strong></h2>
     </div>
 </div>
 
@@ -562,7 +552,7 @@
 
     var nameVal     = $('#name-input').val();
     var emailVal    = $('#email-input').val();
-    var budgetVal    = $('#budget-input').val();
+    var budgetVal   = $('#budget-input').val();
     var messageVal  = $('#msg-input').val();
     $.ajax({
       url: "https://formspree.io/team@shire-digital.com",
