Updated Logo Graphic
Nick wanted some extra separation between the logo and the soft gray
background image, so I've added some white outerglow to it here.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <div class="block app-block-intro">
     <div class="container text-center">
         <!-- <h1 class="block-title m-b-sm text-uppercase app-myphone-brand">Shire Digital Solutions</h1> -->
-        <img src="assets/img/SDS_Logo_Full.png" alt="Shire Digital Solutions Logo">
+        <img src="assets/img/SDS_Logo_Full_glow.png" alt="Shire Digital Solutions Logo">
         <!-- <h3 style="color: #72A541;"><strong>A Full Service Digital Agency</strong></h3>-->
     </div>
 </div>
@@ -471,7 +471,7 @@
 
 <div class="block app-block-contact text-center">
     <!-- Contact Form -->
-    <div class="container" id="contact-form-div">
+    <div class="container" id="contact-form-div app-translate-15" data-transition="entrance">
         <div class="row">
             <div class="col-xs-12">
                 <h3 style="color: #72A541; font-weight: 400; text-align: center;">We want to hear from you. It's never too soon. Ask us anything.</h3>
