--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
   </head>
 <body>
 
-<nav class="navbar navbar-default navbar-static-top navbar-padded text-uppercase app-navbar">
-    <div class="container">
-        <div class="navbar-header">
+<!-- <nav class="navbar navbar-default navbar-static-top navbar-padded text-uppercase app-navbar">
+    <div class="container"> -->
+        <!-- <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed p-x-0" data-toggle="collapse" data-target="#navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-        </div>
+        </div> -->
     <!--
     <div class="navbar-collapse collapse" id="navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -92,8 +92,8 @@
 
       </ul>
     </div><!--/.nav-collapse -->
-    </div>
-</nav>
+    <!-- </div> -->
+<!-- </nav> -->
 
 <div class="block app-block-intro">
     <div class="container text-center">
