--- a/index.html
+++ b/index.html
@@ -209,13 +209,14 @@
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-testimonials" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-testimonials" data-slide-to="1"></li>
+                        <li data-target="#carousel-testimonials" data-slide-to="2"></li>
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
                             <div class="row">
                                     <div class="col-xs-8 col-xs-offset-2">
                                     <h4>Excellent to work with!</h4>
-                                    <p class="info">"Nick and his team at Shire Digital have been excellent to work with!  Not only does he bring the technical expertise to support iTherapy with our website, email hosting, and social media, but he blends this with an understanding and consideration of the overall business success.  It is rare to find the technical and business focus in one company, but we have found it with Shire Digital Solutions!"</p>
+                                    <p class="info">"Nick and his team at Shire Digital have been excellent to work with! Not only does he bring the technical expertise to support iTherapy with our website, email hosting, and social media, but he blends this with an understanding and consideration of the overall business success.  It is rare to find the technical and business focus in one company, but we have found it with Shire Digital Solutions!"</p>
                                     <div class="badge-icon">
                                         <span class="icon icon-user"></span>
                                     </div>
@@ -233,6 +234,18 @@
                                         <span class="icon icon-user"></span>
                                     </div>
                                     <p class="who">- Linnea M.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="row">
+                                <div class="col-xs-8 col-xs-offset-2">
+                                    <h4>Knowledge and expertise</h4>
+                                    <p class="info">"The Shire-Digital team is a joy to work with. Their knowledge and expertise has taken aspects of our business to new heights. The custom Order Management System they created allows us and our customers to track every stage of a jobs completion process. These real-time updates give customers the important status and ETA information they need without having to pick up the phone or send an email. Shire-Digital did such a wonderful job on this project that they are currently creating a new corporate employee online system to stream line our hiring, onboarding, payroll, and human resources. Throughout our time working together they have always been courteous, upfront, and attentive to our needs. Simply put... Shire-Digital has been awesome to work with."</p>
+                                    <div class="badge-icon">
+                                        <span class="icon icon-user"></span>
+                                    </div>
+                                    <p class="who">- Rampit USA</p>
                                 </div>
                             </div>
                         </div>
